--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
     "@mui/material": "^6.4.5",
     "@sendgrid/mail": "^8.1.4",
     "@supabase/supabase-js": "^2.49.1",
+    "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.8",
-    "next": "^15.1.7",
+    "exceljs": "^4.4.0",
+    "fs": "^0.0.1-security",
+    "leaflet": "^1.9.4",
+    "next": "^15.2.1",
+    "path": "^0.12.7",
+    "puppeteer": "^24.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-google-charts": "^5.2.1",
+    "react-leaflet": "^5.0.0",
+    "recharts": "^2.15.1",
+    "resend": "^4.1.2",
+    "styles": "^0.2.1",
+    "supabase": "^2.15.8",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
